MDL-57431 : alignment issues fixed

--- a/mod/quiz/styles.css
+++ b/mod/quiz/styles.css
@@ -726,6 +726,10 @@ table.quizreviewsummary td.cell {
     margin: 0.3em 20px 0 0;
 }
 
+.shuffle-help-span{
+    vertical-align: text-bottom;
+}
+
 #page-mod-quiz-edit ul.section {
     margin: 0;
     padding: 0 20px;
